--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "tatooine",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Tatooine: A pluggable, simple and powerful web scraper.",
-  "main": "index.js",
+  "main": "lib/index.js",
   "author": "Beto Muniz <contato@betomuniz.com>",
   "license": "MIT",
   "scripts": {
     "start": "nodemon index.js --exec babel-node",
-    "test": "mocha test/**/*.js"
+    "test": "mocha test/**/*.js",
+    "build": "babel src --presets babel-preset-es2015 --out-dir lib",
+    "prepublish": "npm run build"
   },
   "dependencies": {
     "async": "2.0.0-rc.6",
