--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tatooine",
-  "version": "0.0.22",
+  "version": "0.0.23",
   "description": "Tatooine: A pluggable, simple and powerful web scraper.",
   "main": "lib/index.js",
   "author": "Beto Muniz <contato@betomuniz.com>",
@@ -8,6 +8,8 @@
   "scripts": {
     "start": "nodemon index.js --exec babel-node",
     "test": "mocha test/**/*.js",
+    "test:coverage": "node_modules/.bin/nyc npm test && tap --cov --coverage-report=lcov test/*.test.js",
+    "test:coverage:travis": "node_modules/.bin/nyc npm test && node_modules/.bin/nyc report --reporter=text-lcov | node_modules/.bin/coveralls",
     "build": "babel src --presets babel-preset-es2015 --out-dir lib",
     "prepublish": "npm run build"
   },
@@ -31,11 +33,13 @@
     "babel-plugin-transform-regenerator": "6.11.4",
     "babel-preset-es2015": "6.9.0",
     "chai": "3.5.0",
+    "coveralls": "2.11.11",
     "dirty-chai": "1.2.2",
     "eslint": "3.1.1",
     "eslint-config-airbnb-base": "5.0.0",
     "eslint-plugin-import": "1.12.0",
     "mocha": "2.5.3",
-    "nodemon": "1.10.0"
+    "nodemon": "1.10.0",
+    "nyc": "7.1.0"
   }
 }
