Update dependencies and fix tests

--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "email": "contato@betomuniz.com"
   },
   "dependencies": {
-    "async": "2.0.1",
-    "cheerio": "0.20.0",
-    "lodash": "4.14.0",
-    "request": "2.74.0"
+    "async": "^2.6.2",
+    "cheerio": "^1.0.0-rc.2",
+    "lodash": "^4.17.11",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "babel-cli": "6.11.4",
