--- a/package.json
+++ b/package.json
@@ -33,13 +33,13 @@
     "babel-plugin-transform-regenerator": "6.11.4",
     "babel-preset-es2015": "6.9.0",
     "chai": "3.5.0",
-    "coveralls": "2.11.11",
+    "coveralls": "^3.0.2",
     "dirty-chai": "1.2.2",
     "eslint": "3.1.1",
     "eslint-config-airbnb-base": "5.0.0",
     "eslint-plugin-import": "1.12.0",
-    "mocha": "2.5.3",
+    "mocha": "^5.2.0",
     "nodemon": "1.10.0",
-    "nyc": "7.1.0"
+    "nyc": "^13.3.0"
   }
 }
