--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-import": "1.12.0",
     "mocha": "^5.2.0",
     "nodemon": "1.10.0",
-    "nyc": "^13.3.0"
+    "nyc": "^13.3.0",
+    "tap": "^12.5.2"
   }
 }
