--- a/package.json
+++ b/package.json
@@ -1,18 +1,11 @@
 {
   "name": "tatooine",
-  "version": "0.0.25",
+  "version": "2.0.0",
   "description": "Tatooine: A pluggable, simple and powerful web scraper.",
-  "main": "lib/index.js",
   "author": "Beto Muniz <contato@betomuniz.com>",
   "license": "MIT",
-  "scripts": {
-    "start": "nodemon index.js --exec babel-node",
-    "test": "mocha test/**/*.js",
-    "test:coverage": "node_modules/.bin/nyc npm test && tap --cov --coverage-report=lcov test/*.test.js",
-    "test:coverage:travis": "node_modules/.bin/nyc npm test && node_modules/.bin/nyc report --reporter=text-lcov | node_modules/.bin/coveralls",
-    "build": "babel src --presets babel-preset-es2015 --out-dir lib",
-    "prepublish": "npm run build"
-  },
+  "main": "lib/index.js",
+  "module": "lib/index.esm.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/obetomuniz/tatooine.git"
@@ -22,25 +15,21 @@
     "email": "contato@betomuniz.com"
   },
   "dependencies": {
-    "async": "^2.6.2",
-    "cheerio": "^1.0.0-rc.2",
-    "lodash": "^4.17.11",
-    "request": "^2.88.0"
+    "axios": "^0.19.2",
+    "jsdom": "^16.2.2"
   },
   "devDependencies": {
-    "babel-cli": "6.11.4",
-    "babel-core": "6.11.4",
-    "babel-plugin-transform-regenerator": "6.11.4",
-    "babel-preset-es2015": "6.9.0",
-    "chai": "3.5.0",
-    "coveralls": "^3.0.2",
-    "dirty-chai": "1.2.2",
-    "eslint": "3.1.1",
-    "eslint-config-airbnb-base": "5.0.0",
-    "eslint-plugin-import": "1.12.0",
-    "mocha": "^5.2.0",
-    "nodemon": "1.10.0",
-    "nyc": "^13.3.0",
-    "tap": "^12.5.2"
+    "eslint": "^7.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-eslint-comments": "^3.1.2",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsdoc": "^25.0.1",
+    "eslint-plugin-prettier": "^3.1.3",
+    "prettier": "^2.0.5",
+    "rollup": "^2.8.2"
+  },
+  "scripts": {
+    "pkg": "rollup -c",
+    "prepublish": "npm run pkg"
   }
 }
