--- a/.npmignore
+++ b/.npmignore
@@ -1,5 +1,3 @@
-src/
-examples/
 .eslintrc
 .eslintignore
 .gitignore
@@ -7,3 +5,11 @@ examples/
 .prettierignore
 CONTRIBUTING.md
 rollup.config.js
+jest.config.js
+babel.config.json
+src/
+docs/
+examples/
+covarage/
+devtools/
+jest.config/
