--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tatooine",
-  "version": "2.0.9",
+  "version": "2.0.10",
   "description": "Tatooine: A pluggable, simple and powerful web scraper.",
   "author": "Beto Muniz <contato@betomuniz.com>",
   "license": "MIT",
@@ -19,17 +19,26 @@
     "jsdom": "^16.2.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.9.6",
+    "@types/jest": "^25.2.1",
+    "babel-jest": "^26.0.1",
     "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-eslint-comments": "^3.1.2",
     "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jest": "^23.11.0",
     "eslint-plugin-jsdoc": "^25.0.1",
     "eslint-plugin-prettier": "^3.1.3",
+    "esm": "^3.2.25",
+    "jest": "^26.0.1",
     "prettier": "^2.0.5",
     "rollup": "^2.8.2"
   },
   "scripts": {
     "pkg": "rollup -c",
-    "prepublish": "npm run pkg"
+    "prepublish": "npm run pkg",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --collect-coverage"
   }
 }
