--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tatooine",
-  "version": "2.0.14",
+  "version": "2.0.15",
   "description": "Tatooine: A pluggable, simple and powerful web scraper.",
   "author": "Beto Muniz <contato@betomuniz.com>",
   "license": "MIT",
@@ -22,6 +22,7 @@
     "@babel/preset-env": "^7.9.6",
     "@types/jest": "^25.2.1",
     "babel-jest": "^26.0.1",
+    "codecov": "^3.6.5",
     "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-eslint-comments": "^3.1.2",
@@ -37,8 +38,35 @@
   "scripts": {
     "pkg": "rollup -c",
     "prepublish": "npm run pkg",
-    "test": "jest",
+    "test": "jest && codecov",
     "test:watch": "jest --watch",
     "test:coverage": "jest --collect-coverage"
+  },
+  "jest": {
+    "verbose": true,
+    "clearMocks": true,
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "coverageReporters": [
+      "json",
+      "text",
+      "lcov",
+      "clover"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "jsx",
+      "ts",
+      "tsx",
+      "node"
+    ],
+    "testEnvironment": "node",
+    "testPathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "coverageDirectory": "./coverage/",
+    "collectCoverage": true
   }
 }
