--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tatooine",
-  "version": "2.0.16",
+  "version": "2.0.17",
   "description": "Tatooine: A pluggable, simple and powerful web scraper.",
   "author": "Beto Muniz <contato@betomuniz.com>",
   "license": "MIT",
@@ -16,7 +16,8 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "jsdom": "^16.2.2"
+    "jsdom": "^16.2.2",
+    "puppeteer": "^3.0.4"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.9.6",
