Revamp API to v2

--- a/.eslintrc
+++ b/.eslintrc
@@ -82,6 +82,7 @@
   },
   "settings": {
     "jsdoc": {
+      "preferredTypes": ["PuppeteerPageClass"],
       "tagNamePreference": {
         "returns": "return",
         "yields": "yield"
