--- a/.npmignore
+++ b/.npmignore
@@ -1,15 +1,13 @@
-.eslintrc
-.eslintignore
 .gitignore
 .prettierrc
 .prettierignore
-CONTRIBUTING.md
+README.md
+LICENSE.md
 rollup.config.js
-jest.config.js
-babel.config.json
-src/
+tsconfig.json
+lib/
 docs/
-examples/
+demo/
 covarage/
-devtools/
-jest.config/
+__fixtures__
+__tests__
