--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
   "name": "tatooine",
-  "version": "2.1.4",
-  "description": "Tatooine: A pluggable, simple and powerful web scraper.",
+  "version": "3.0.0",
+  "description": "",
+  "directories": {
+    "doc": "docs",
+    "lib": "lib"
+  },
   "author": "Beto Muniz <contato@betomuniz.com>",
   "license": "MIT",
-  "main": "lib/index.js",
-  "module": "lib/index.esm.js",
+  "type": "module",
+  "main": "dist/bundle.cjs.js",
+  "module": "dist/bundle.esm.js",
+  "exports": {
+    "import": "./dist/bundle.esm.js",
+    "require": "./dist/bundle.cjs.js"
+  },
+  "types": "./dist/types.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/obetomuniz/tatooine.git"
@@ -15,40 +25,37 @@
     "email": "contato@betomuniz.com"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "jsdom": "^16.5.2",
-    "puppeteer": "^8.0.0"
+    "axios": "^1.3.4",
+    "jsdom": "^21.1.1",
+    "lodash.get": "^4.4.2",
+    "puppeteer": "^19.7.5",
+    "xpath-ts": "^1.3.13"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.13.12",
-    "@types/jest": "^26.0.22",
-    "babel-jest": "^26.0.1",
-    "codecov": "^3.8.1",
-    "eslint": "^7.23.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-eslint-comments": "^3.1.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jest": "^24.3.3",
-    "eslint-plugin-jsdoc": "^32.3.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "esm": "^3.2.25",
-    "jest": "^26.0.1",
-    "prettier": "^2.0.5",
-    "rollup": "^2.44.0"
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.4.0",
+    "@types/jest": "^29.5.0",
+    "@types/jsdom": "^21.1.0",
+    "@types/lodash.get": "^4.4.7",
+    "jest": "^29.5.0",
+    "rollup": "^3.20.0",
+    "rollup-plugin-typescript2": "^0.34.1",
+    "ts-jest": "^29.0.5",
+    "typescript": "^5.0.2"
   },
   "scripts": {
     "pkg": "rollup -c",
     "prepublishOnly": "npm run pkg",
-    "test": "jest && codecov",
-    "test:watch": "jest --watch",
+    "demo": "npx @digitak/esrun ./demo",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest && codecov",
+    "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watch",
     "test:coverage": "jest --collect-coverage"
   },
   "jest": {
+    "preset": "ts-jest",
     "verbose": true,
     "clearMocks": true,
-    "coveragePathIgnorePatterns": [
-      "/node_modules/"
-    ],
     "coverageReporters": [
       "json",
       "text",
@@ -58,16 +65,30 @@
     "moduleFileExtensions": [
       "js",
       "json",
-      "jsx",
       "ts",
-      "tsx",
       "node"
     ],
+    "extensionsToTreatAsEsm": [
+      ".ts"
+    ],
+    "globals": {
+      "ts-jest": {
+        "useESM": true
+      }
+    },
     "testEnvironment": "node",
     "testPathIgnorePatterns": [
-      "/node_modules/"
+      "/node_modules/",
+      "fixtures.ts",
+      "/lib/types.ts"
     ],
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.tsx?$",
+    "collectCoverage": true,
     "coverageDirectory": "./coverage/",
-    "collectCoverage": true
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "fixtures.ts",
+      "/lib/types.ts"
+    ]
   }
 }
