--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
       "ts",
       "node"
     ],
+    "moduleDirectories": ["node_modules", "lib"],
     "extensionsToTreatAsEsm": [
       ".ts"
     ],
