Improve build script. Update project structure. Improve typing export. Remove tests for entire rewrite.

--- a/.npmignore
+++ b/.npmignore
@@ -1,13 +1,15 @@
 .gitignore
 .prettierrc
 .prettierignore
-README.md
-LICENSE.md
+.npmignore
+.prettierrc
+.travis.yml
+package-lock.json
 rollup.config.js
 tsconfig.json
 lib/
 docs/
 demo/
-covarage/
-__fixtures__
-__tests__
+node_modules/
+coverage/
+fixtures/
