--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "baseUrl": "./lib",
+    "rootDir": "lib",
+    "noImplicitAny": true,
     "target": "esnext",
     "module": "esnext",
     "moduleResolution": "node",
@@ -10,9 +11,11 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "lib": ["esnext", "dom"],
+    "sourceMap": true,
     "declaration": true,
-    "declarationDir": "dist/types"
+    "declarationDir": "types"
   },
+  "outDir": "out-tsc",
   "include": ["lib/**/*.ts"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "exclude": ["node_modules"]
 }
