--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tatooine",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "description": "",
   "directories": {
     "doc": "docs",
@@ -9,13 +9,17 @@
   "author": "Beto Muniz <contato@betomuniz.com>",
   "license": "MIT",
   "type": "module",
-  "main": "dist/bundle.cjs.js",
-  "module": "dist/bundle.esm.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "exports": {
-    "import": "./dist/bundle.esm.js",
-    "require": "./dist/bundle.cjs.js"
+    "types": "./dist/index.d.ts",
+    "import": "./dist/esm/index.js",
+    "require": "./dist/cjs/index.js"
   },
-  "types": "./dist/types.d.ts",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/obetomuniz/tatooine.git"
@@ -34,62 +38,20 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-terser": "^0.4.0",
-    "@types/jest": "^29.5.0",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@types/jsdom": "^21.1.0",
     "@types/lodash.get": "^4.4.7",
-    "jest": "^29.5.0",
     "rollup": "^3.20.0",
-    "rollup-plugin-typescript2": "^0.34.1",
-    "ts-jest": "^29.0.5",
-    "typescript": "^5.0.2"
+    "rollup-plugin-dts": "^5.3.0",
+    "rollup-plugin-filesize": "^10.0.0",
+    "tslib": "^2.5.0",
+    "typescript": "^5.0.2",
+    "utility-types": "^3.10.0"
   },
   "scripts": {
-    "pkg": "rollup -c",
+    "clear": "rm -rf dist/",
+    "pkg": "npm run clear && rollup -c",
     "prepublishOnly": "npm run pkg",
-    "demo": "npx @digitak/esrun ./demo",
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest && codecov",
-    "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watch",
-    "test:coverage": "jest --collect-coverage"
-  },
-  "jest": {
-    "preset": "ts-jest",
-    "verbose": true,
-    "clearMocks": true,
-    "coverageReporters": [
-      "json",
-      "text",
-      "lcov",
-      "clover"
-    ],
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts",
-      "node"
-    ],
-    "moduleDirectories": ["node_modules", "lib"],
-    "extensionsToTreatAsEsm": [
-      ".ts"
-    ],
-    "globals": {
-      "ts-jest": {
-        "useESM": true
-      }
-    },
-    "testEnvironment": "node",
-    "testPathIgnorePatterns": [
-      "/node_modules/",
-      "fixtures.ts",
-      "/lib/types.ts"
-    ],
-    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.tsx?$",
-    "collectCoverage": true,
-    "coverageDirectory": "./coverage/",
-    "coveragePathIgnorePatterns": [
-      "/node_modules/",
-      "fixtures.ts",
-      "/lib/types.ts"
-    ]
+    "demo": "npx @digitak/esrun ./demo"
   }
 }
