--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "xpath-ts": "^1.3.13"
   },
   "devDependencies": {
+    "@release-it/conventional-changelog": "^5.1.1",
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^11.0.0",
     "@types/jsdom": "^21.1.0",
     "@types/lodash.get": "^4.4.7",
+    "release-it": "^15.9.3",
     "rollup": "^3.20.0",
     "rollup-plugin-dts": "^5.3.0",
     "rollup-plugin-filesize": "^10.0.0",
@@ -49,9 +51,29 @@
     "utility-types": "^3.10.0"
   },
   "scripts": {
-    "clear": "rm -rf dist/",
-    "pkg": "npm run clear && rollup -c",
+    "pkg": "rm -rf ./dist/ && rollup -c",
     "prepublishOnly": "npm run pkg",
-    "demo": "npx @digitak/esrun ./demo"
+    "release": "release-it"
+  },
+  "release-it": {
+    "git": {
+      "commitMessage": "Release v${version}"
+    },
+    "github": {
+      "release": true,
+      "web": true
+    },
+    "npm": {
+      "publish": true
+    },
+    "plugins": {
+      "@release-it/conventional-changelog": {
+        "infile": "docs/CHANGELOG.md",
+        "header": "# Changelog",
+        "preset": {
+          "name": "conventionalcommits"
+        }
+      }
+    }
   }
 }
